--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.google.maps:google-maps-services:+'
     implementation 'com.google.maps.android:android-maps-utils:3.4.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
